<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="customise_pill_home_customisation_category_title">Customise</string>
    <string name="customise_pill_home_customisation_date_title">Date</string>
    <string name="customise_pill_home_customisation_pill_title">Pill</string>
    <string name="customise_pill_home_customisation_refresh_info_title">Refresh info</string>
    <string name="customise_pill_home_customisation_text_title">Text</string>
    <string name="customise_pill_home_customisation_weather_category_title">Weather</string>
    <string name="customise_pill_home_customisation_weather_location_title">Location</string>
    <string name="customise_pill_home_customisation_weather_providers_title">Weather providers</string>
    <string name="customise_pill_home_customisation_weather_title">Weather</string>
    <string name="customise_pill_location_data_category_title">Saved location</string>
    <string name="customise_pill_location_data_delete_description">Delete my saved location data</string>
    <string name="customise_pill_location_data_delete_title">Delete saved location</string>
    <string name="customise_pill_location_data_store_title">Save current location</string>
    <string name="customise_pill_location_location_always_use_description">Use device location to retrieve weather data (Location/GPS must always be turned on)</string>
    <string name="customise_pill_location_location_always_use_title">Use device location</string>
    <string name="customise_pill_location_location_category_title">Location</string>
    <string name="customise_pill_pill_colour_background_button_original">Default</string>
    <string name="customise_pill_pill_colour_background_description">Edit the background colour of the pill</string>
    <string name="customise_pill_pill_colour_background_title">Background colour</string>
    <string name="customise_pill_pill_colour_category_title">Colour</string>
    <string name="customise_pill_pill_colour_logo_button_original">Default</string>
    <string name="customise_pill_pill_colour_logo_description">Edit the colour of the Google logo</string>
    <string name="customise_pill_pill_colour_logo_title">Logo colour</string>
    <string name="customise_pill_pill_edge_add_description">"Add the greyish white Pill edge to the left side of the Pill

Note: A launcher with padding removal support is required to remove the extra space between the edge of the screen and the Pill."</string>
    <string name="customise_pill_pill_edge_add_title">Add Pill edge</string>
    <string name="customise_pill_pill_edge_category">Pill edge</string>
    <string name="customise_pill_pill_edge_colour_button_original">Default</string>
    <string name="customise_pill_pill_edge_colour_description">Edit the edge colour of the pill</string>
    <string name="customise_pill_pill_edge_colour_title">Edge colour</string>
    <string name="customise_pill_pill_press_action_category">Press action</string>
    <string name="customise_pill_pill_press_action_title">Set press action</string>
    <string name="customise_pill_pill_press_action_values_default">google_search</string>
    <string name="customise_pill_pill_size_category">Size</string>
    <string name="customise_pill_pill_size_reduce_size_description">Reduce the size of the Pill by 10%</string>
    <string name="customise_pill_pill_size_reduce_size_title">Reduce Pill by 10%</string>
    <string name="customise_pill_weather_configure_category_title">Configure</string>
    <string name="customise_pill_weather_configure_refresh_period_title">Refresh period</string>
    <string name="customise_pill_weather_configure_temperature_units_default">celsius</string>
    <string name="customise_pill_weather_configure_temperature_units_title">Temperature units</string>
    <string name="customise_pill_weather_configure_weather_provider_default">google_awareness</string>
    <string name="customise_pill_weather_configure_weather_provider_title">Weather provider</string>
    <string name="customise_pill_weather_press_action_category_title">Press action</string>
    <string name="customise_pill_weather_press_action_open_google_weather_description">Take me to Google Weather after pressing on the temperature or the weather icon</string>
    <string name="customise_pill_weather_press_action_open_google_weather_title">Open Google Weather</string>
    <string name="customise_pill_weather_providers_category_title">Weather providers</string>
    <string name="customise_pill_weather_providers_google_title">Google Awareness</string>
    <string name="customise_pill_weather_providers_owm_category_title">Open Weather Map</string>
    <string name="customise_pill_weather_providers_owm_copyright_description">"
Copyright 2016 VANE. All Rights Reserved.
"</string>
    <string name="customise_pill_weather_providers_owm_enter_api_dialog_text">Enter # to use default API key.</string>
    <string name="customise_pill_weather_providers_owm_enter_api_title">Set API key</string>
    <string name="customise_pill_weather_providers_owm_signup_description">Choose free plan</string>
    <string name="customise_pill_weather_providers_owm_signup_title">Sign up for API key</string>
    <string name="customise_pill_weather_providers_owm_title">Open Weather Map</string>
    <string name="customise_pill_weather_providers_wu_category_title">Weather Underground</string>
    <string name="customise_pill_weather_providers_wu_copyright_description">Weather Underground is a registered trademark of The Weather Channel, LLC. both in the United States and internationally. The Weather Underground Logo is a trademark of Weather Underground, LLC.</string>
    <string name="customise_pill_weather_providers_wu_enter_api_title">Set API key</string>
    <string name="customise_pill_weather_providers_wu_signup_description">Choose stratus and developer</string>
    <string name="customise_pill_weather_providers_wu_signup_title">Sign up for API key</string>
    <string name="customise_pill_weather_providers_wu_title">Weather Underground</string>
    <string name="customise_pill_weather_refresh_info_category_title">Refresh info</string>
    <string name="customise_pill_weather_refresh_info_last_check_title">Last check</string>
    <string name="customise_pill_weather_refresh_info_last_refresh_title">Last refresh</string>
    <string name="customise_pill_weather_refresh_info_last_weather_provider_title">Weather provider</string>
    <string name="customise_pill_weather_weather_setting_description">Show weather info for my location</string>
    <string name="customise_pill_weather_weather_setting_title">Enable weather</string>
    <string name="home_card_01_description">"Thanks for downloading my app, the world's most popular and highest rated pixel pill widget app."</string>
    <string name="home_card_01_title">Welcome</string>
    <string name="home_card_02_description">"To use the widget, you need to add it using your home launcher's widget menu."</string>
    <string name="home_card_02_title">Setup</string>
    <string name="home_card_03_button">Customise</string>
    <string name="home_card_03_description">Customise the widget with extras such as custom pill colour, click actions and weather info.</string>
    <string name="home_card_03_title">Customise the widget</string>
    <string name="home_card_04_button">Play Store</string>
    <string name="home_card_04_description">If you have any comments, leave a rating on the Play Store.</string>
    <string name="home_card_04_title">Rate</string>
    <string name="pref_about_developer_summary">"Look out for my upcoming app, Pixel Oreo Widget.

©2016–2017 Hasscore Studios."</string>
    <string name="pref_about_developer_title">Developed by Hasscore Studios</string>
    <string name="pref_about_open_source_licenses_summary">License details for open source software</string>
    <string name="pref_about_open_source_licenses_title">Open source licenses</string>
    <string name="pref_about_translators_summary">People who have helped to translate this app</string>
    <string name="pref_about_translators_title">Translators</string>
    <string name="pref_about_version_summary">Build</string>
    <string name="pref_about_version_title">Version</string>
    <string name="pref_category_about">About</string>
    <string name="pref_category_change_log">Change Log</string>
    <string name="pref_change_log_summary">Show the change log after updating to a new version</string>
    <string name="pref_change_log_title">Enable Change Log</string>
</resources>